[gd_scene load_steps=5 format=3 uid="uid://b3gqjpq5gcrs1"]

[ext_resource type="Script" uid="uid://dlgla71iwca0b" path="res://scripts/player/player.gd" id="1_4flbx"]
[ext_resource type="PackedScene" uid="uid://bdsr0tfgopm7" path="res://assets/characters/player/viewmodel/fps_viewmodel_arms.tscn" id="2_i3pqv"]
[ext_resource type="PackedScene" uid="uid://bordqsg5k5ij0" path="res://assets/characters/player/worldmodel/taco_truck_cook_world.tscn" id="2_onrkg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sh265"]
radius = 0.35
height = 1.4

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_4flbx")
anim_tree_path = NodePath("Visuals/TacoTruckCookVisual/AnimationTree")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7626661, 0)
shape = SubResource("CapsuleShape3D_sh265")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, -0.18575372)

[node name="WorldCamera" type="Camera3D" parent="Head"]
cull_mask = 1
current = true

[node name="HandTarget" type="Marker3D" parent="Head/WorldCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.21892929, -0.28544313, -0.41738895)

[node name="InteractRay" type="RayCast3D" parent="Head"]
exclude_parent = false
target_position = Vector3(0, 0, -3)
collision_mask = 8

[node name="HoldPoint" type="Marker3D" parent="Head"]
transform = Transform3D(0.9547608, 0.11619362, 0.27373502, 0, 0.92050487, -0.39073113, -0.29737487, 0.37305477, 0.87886196, 0.33, -0.135, -1.145)

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Crosshair" type="TextureRect" parent="HUD"]
custom_minimum_size = Vector2(16, 16)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="HUD/Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="ViewModelViewportContainer" type="SubViewportContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="ViewModelViewport" type="SubViewport" parent="HUD/ViewModelViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="ViewModelWorld" type="Node3D" parent="HUD/ViewModelViewportContainer/ViewModelViewport"]

[node name="ViewModelCamera_VM" type="Camera3D" parent="HUD/ViewModelViewportContainer/ViewModelViewport/ViewModelWorld"]
process_priority = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, -0.18575372)
cull_mask = 2
current = true
fov = 30.0

[node name="ViewModelRoot_VM" type="Node3D" parent="HUD/ViewModelViewportContainer/ViewModelViewport/ViewModelWorld"]
transform = Transform3D(-1.15, 0, -1.0053619e-07, 0, 1.15, 0, 1.0053619e-07, 0, -1.15, 0, 1.4, -0.326)

[node name="fps_viewmodel_arms" parent="HUD/ViewModelViewportContainer/ViewModelViewport/ViewModelWorld/ViewModelRoot_VM" instance=ExtResource("2_i3pqv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.1)

[node name="InteractPrompt" type="Label" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.52156866)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "TESTING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Visuals" type="Node3D" parent="."]

[node name="TacoTruckCookVisual" parent="Visuals" instance=ExtResource("2_onrkg")]
